force-app/main/default/objects/Bank__c/Bank__c.object-meta.xml
<CustomObject>
    <description>Bank branch</description>
    <label>Bank</label>
    <nameField>
        <label>Bank Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Banks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>