force-app/main/default/objects/Bank__c/fields/Balance__c.field-meta.xml
<CustomField>
    <fullName>Balance__c</fullName>
    <description>The total balance for this bank account</description>
    <inlineHelpText>The total balance for this bank account</inlineHelpText>
    <label>Balance</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>