force-app/main/default/objects/Bank__c/fields/Branch_Name__c.field-meta.xml
<CustomField>
    <fullName>Branch_Name__c</fullName>
    <label>Branch Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Barclays</fullName>
            </value>
            <value>
                <fullName>Monzo</fullName>
            </value>
            <value>
                <fullName>Natwest</fullName>
            </value>
            <value>
                <fullName>Nationwide</fullName>
            </value>
            <value>
                <fullName>Starling</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>